<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Avatar</string>
    <string name="crear">Crear Avatar</string>
    <string name="cerrar">Volver a inicio</string>

    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>

    <string name="humano">Humano</string>
    <string name="elfo">Elfo</string>
    <string name="hobbit">Hobbit</string>
    <string name="enano">Enano</string>

    <string name="arquero">Arquero</string>
    <string name="guerrero">Guerrero</string>
    <string name="mago">Mago</string>
    <string name="herrero">Herrero</string>
    <string name="minero">Minero</string>

    <string name="vida">Vida</string>
    <string name="magia">Magia</string>
    <string name="fuerza">Fuerza</string>
    <string name="velocidad">Velocidad</string>
    <string name="nombre">Nombre</string>

    <string name="tipo" tools:ignore="Typos">Especie - Sexo - Profesion</string>

    <string name="descripcionImgProfesion" tools:ignore="Typos">Profesion del avatar</string>
    <string name="descripcionImgEspecie">Especie del avatar</string>
    <string name="input_nombre">Introduzca un nombre</string>

</resources>